@@ -5,10 +5,6 @@
 		<Option title="guayadeque" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option show_notes="0">
-			<notes>
-			</notes>
-		</Option>
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/guayadeque" prefix_auto="1" extension_auto="1" />
@@ -83,6 +79,8 @@
 		<Unit filename="src/AudioScrobble.h" />
 		<Unit filename="src/AutoPulseGauge.cpp" />
 		<Unit filename="src/AutoPulseGauge.h" />
+		<Unit filename="src/Base64.cpp" />
+		<Unit filename="src/Base64.h" />
 		<Unit filename="src/Commands.h" />
 		<Unit filename="src/Config.cpp" />
 		<Unit filename="src/Config.h" />
