@@ -25,6 +25,8 @@
 #include "Config.h"
 #include "Utils.h"
 
+#include <tplugins.h>
+
 #include "wx/clipbrd.h"
 #include <wx/curl/base.h>
 #include <wx/image.h>
@@ -99,6 +101,9 @@ bool guMainApp::OnInit()
 
     // Init the wxCurl Lib
     wxCurlBase::Init();
+
+    // Register the TagLib extra plugins
+    registerTaglibPlugins();
 
     //
     if( m_Locale.Init( wxLANGUAGE_DEFAULT,
